# tp-ai-agent

./: .env.example  COVERAGE_ANALYSIS.md  COVERAGE_MATRIX.txt  Dockerfile  IMPLEMENTATION_PLAN.md  QUICK_REFERENCE.txt  README.md  docker-compose.yml  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
media_support/: __init__.py  agent.py  api_setup_guide.md
media_support/.adk/: session.db
media_support/agents/: __init__.py  arr_bot.py  comms_bot.py  plex_bot.py  server_bot.py
media_support/callbacks/: __init__.py  logging_callbacks.py
media_support/tools/: __init__.py  arr_tools.py  discord_tools.py  plex_tools.py
media_support/workflows/: __init__.py  maintenance_workflow.py  support_workflow.py
